--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.TrabajoJFinalorge"
         tools:targetApi="31">
         <activity
+            android:name=".Personal"
+            android:exported="false" />
+        <activity
+            android:name=".Formulario"
+            android:exported="false" />
+        <activity
+            android:name=".personal"
+            android:exported="false" />
+        <activity
             android:name=".RestableceContra"
             android:exported="false" />
         <activity
